--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -1,5 +1,9 @@
 .table-element-container {
 	width: 100%;
+	@media only screen and (max-width: 900px) {
+		overflow-x: scroll;
+		width: 100vw;
+	}
 	.table-element {
 		background-color: var(--background);
 		width: 100%;
@@ -23,7 +27,7 @@
 		.table-element-cell-button {
 			background-color: var(--background);
 			border: 1px solid var(--accent);
-			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+			box-shadow: var(--box-shadow);
 			color: var(--text);
 			font-size: 2rem;
 			padding: 0.5rem;
