--- a/src/components/TablePagination/tablePagination.scss
+++ b/src/components/TablePagination/tablePagination.scss
@@ -2,17 +2,20 @@
 	align-items: center;
 	background-color: var(--accent);
 	border: none;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: var(--box-shadow);
 	color: var(--subtext);
 	display: flex;
 	font-size: 1rem;
-	padding: 0.25rem 1rem;
+	padding: 0.2rem 0.8rem;
 	user-select: none;
 }
 
 .pagination-container {
 	display: flex;
 	justify-content: space-between;
-	margin: 2rem;
+	margin: 2rem 2rem 5rem 2rem;
 	max-width: 1400px;
+	@media only screen and (max-width: 900px) {
+		margin: 2rem 1rem 5rem 1rem;
+	}
 }
